packages/core/src/pagination/PageButton.css
.saltPageButton {
  min-width: var(--salt-size-base);
  font-weight: var(--salt-text-fontWeight);
  height: var(--salt-size-base);
  color: var(--salt-content-primary-foreground);
  background: var(--salt-selectable-background);
  appearance: none;
  box-sizing: border-box;
  padding: 0 var(--salt-spacing-100);
  border: none;
  font-size: var(--salt-text-fontSize);
  font-family: var(--salt-text-fontFamily);
  line-height: var(--salt-text-lineHeight);
  letter-spacing: var(--salt-text-letterSpacing);
  cursor: var(--salt-cursor-hover);
  border-radius: var(--salt-palette-corner-weak);
}

.saltPageButton:hover,
.saltPageButton:focus-visible {
  background: var(--salt-selectable-background-hover);
}

.saltPageButton:active {
  background: var(--salt-selectable-background-selected);
}

.saltPageButton:focus-visible {
  outline: var(--salt-focused-outline);
}

.saltPageButton:disabled {
  color: var(--salt-content-secondary-foreground);
  background: var(--salt-selectable-background);
  cursor: var(--salt-cursor-readonly);
}

.saltPageButton[aria-current="page"] {
  border: var(--salt-size-fixed-100) var(--salt-borderStyle-solid) var(--salt-selectable-borderColor-selected);
  background: var(--salt-selectable-background-selected);
}

.saltPageButton-fixed {
  padding: 0;
}

